[tool.poetry]
name = "pandas_selector"
version = "1.1.0"
description = "Simple, composable selectors for loc[], iloc[], assign() and others."
authors = ["Eike von Seggern <eikevons@mailbox.org>"]
repository = "https://github.com/eikevons/pandas-selector.git"
readme = "README.rst"
license = "MIT"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Topic :: Scientific/Engineering"
]

[tool.poetry.dependencies]
python = "^3.6.1"
pandas = "^1"
sphinx = {version = "^4.1.2", optional = true}
pydata-sphinx-theme = {version = "^0.6.0", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pytest-watch = "^4.2.0"
sphinx = "^4.1.2"
sphinxcontrib-fulltoc = "^1.2.0"
pytest-cov = "^2.11.1"
pydata-sphinx-theme = "^0.6.0"
mypy = "^0.910"
pandas-stubs = "~1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
rtdbuild = ["sphinx", "pydata-sphinx-theme"]
