[tool.poetry]
name = "pandas_paddles"
version = "1.3.1"
description = "Simple, composable selectors for loc[], iloc[], assign() and others for fluent-API style Pandas code."
authors = ["Eike von Seggern <eikevons@mailbox.org>"]
repository = "https://github.com/eikevons/pandas-paddles.git"
readme = "README.rst"
license = "MIT"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Topic :: Scientific/Engineering"
]

[tool.poetry.dependencies]
python = "^3.7.0"
pandas = "^1"
sphinx = {version = "^4.4.0", optional = true}
pydata-sphinx-theme = {version = "^0.8.0", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
pytest-watch = "^4.2.0"
sphinx = "^4.4.0"
sphinxcontrib-fulltoc = "^1.2.0"
pytest-cov = "^3.0.0"
pydata-sphinx-theme = "^0.8.0"
mypy = "^0.931"
pandas-stubs = "~1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
rtdbuild = ["sphinx", "pydata-sphinx-theme"]
